--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -44,7 +44,7 @@ jobs:
       with:
         working-dir: .
         output-file: README.md
-        output-method: inject
+        output-method: replace
         git-push: true
         git-commit-message: "create terraform-docs"
         template: "<!-- BEGIN_TF_DOCS -->\n{{ .Content }}\n<!-- END_TF_DOCS -->\n"
