--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -47,4 +47,7 @@ jobs:
         output-method: replace
         git-push: true
         git-commit-message: "create terraform-docs"
-        template: "<!-- BEGIN_TF_DOCS -->\n{{ .Content }}\n<!-- END_TF_DOCS -->\n"
+        template: |
+          <!-- BEGIN_TF_DOCS -->
+          {{ .Content }}
+          <!-- END_TF_DOCS -->"
