--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -2,6 +2,7 @@ name: Validate PR
 
 on:
   pull_request:
+    types: [opened, synchronize, reopened, ready_for_review, edited]
     branches:
       - master
 
@@ -29,7 +30,7 @@ jobs:
       - name: Run `pre-commit`` checks
         run: pre-commit run --all-files
 
-  terraform-docs-validate:
+  terraform-docs:
     name: Validate terraform docs
     runs-on: ubuntu-latest
     needs: [check]
@@ -43,7 +44,10 @@ jobs:
       with:
         working-dir: .
         output-file: README.md
-        output-method: replace
+        output-method: inject
         git-push: true
         git-commit-message: "create terraform-docs"
-        template: "<!-- BEGIN_TF_DOCS -->\n{{ .Content }}\n<!-- END_TF_DOCS -->\n"
+        template: |-
+          <!-- BEGIN_TF_DOCS -->
+          {{ .Content }}
+          <!-- END_TF_DOCS -->
