--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release
+name: Automatic Infra-scripts Release
 
 on:
   push:
@@ -6,25 +6,9 @@ on:
       - master
 
 jobs:
-  tag:
-    name: Bump version
-    runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, 'Initial commit')"
-
-    steps:
-    - uses: actions/checkout@v3
-      with:
-        ref: ${{ github.event.pull_request.head.sha }}
-        fetch-depth: '0'
-
-    - name: Bump version and push tag
-      uses: anothrNick/github-tag-action@v1
-      id: tag
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        WITH_V: true
-
-    - name: Create Release
-      uses: softprops/action-gh-release@v1
-      with:
-        tag_name: ${{ steps.tag.outputs.new_tag }}
+  github-release:
+    uses: Aventus-Network-Services/Infra-scripts/.github/workflows/automatic-releases.yaml@v5.2.0
+    with:
+      default_bump: minor
+    secrets:
+      envPat: ${{ secrets.GITHUB_TOKEN }}
